--- a/update-password.html
+++ b/update-password.html
@@ -18,37 +18,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
 
-    <script>
-        // --- START: Environment Detection ---
-        let apiBaseUrl;
-        // *** Verify/Update these hostnames if yours are different ***
-        const stagingHostname = 'staging.cogmatiq.com'; 
-        const productionHostname = 'cogmatiq.com';      
-        const currentHostname = window.location.hostname;
-
-        if (currentHostname === stagingHostname || currentHostname === 'localhost' || currentHostname === '127.0.0.1') {
-          // Use staging API for staging domain or local development
-          apiBaseUrl = 'https://cogmatiq-api-staging-xdw7ikkfbq-uc.a.run.app'; 
-          console.log('Environment: Staging | API:', apiBaseUrl); 
-        } else {
-          // Default to production API for any other hostname (like cogmatiq.com)
-          apiBaseUrl = 'https://cogmatiq-api-6wh3xe6bsa-uc.a.run.app'; 
-          console.log('Environment: Production | API:', apiBaseUrl);
-        }
-        // --- END: Environment Detection ---
-    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="/supabaseClient.js"></script>
 
     <style>
         body { font-family: 'Manrope', sans-serif; background: linear-gradient(to bottom, #1A2533, #111827); color: #E5E7EB; }
         .accent-text { color: #00B5AD; }
         .accent-bg { background-color: #00B5AD; }
         .accent-bg:hover { background-color: #009A94; }
-        .card { background: #1F2A44; border: 1px solid #2D3748; padding: 2rem; border-radius: 0.5rem; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
+        .card { background: #1F2A44; border: 1px solid #2D3748; padding: 2rem; border-radius: 0.5rem; box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3); }
+        .animate-fade-in { animation: fadeIn 0.5s ease-out; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .hidden { display: none; }
     </style>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen p-4">
+<body class="flex flex-col items-center justify-center min-h-screen p-4 animate-fade-in">
 
     <div class="w-full max-w-md">
         <a href="/" class="flex items-center justify-center gap-3 mb-8 transition-opacity hover:opacity-90">
@@ -58,54 +43,81 @@
 
         <div class="card">
             <h1 class="text-2xl font-bold text-center mb-6">Set Your New Password</h1>
-            <form id="update-password-form" class="space-y-6">
+            <form id="update-password-form" class="space-y-6 hidden">
                 <div>
                     <label for="new-password" class="block text-sm font-semibold text-gray-400">New Password</label>
-                    <input type="password" id="new-password" required minlength="6" class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
+                    <input type="password" id="new-password" required minlength="6" placeholder="At least 6 characters" class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
                 </div>
                 <div>
                     <label for="confirm-password" class="block text-sm font-semibold text-gray-400">Confirm New Password</label>
                     <input type="password" id="confirm-password" required minlength="6" class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
                 </div>
                 <div>
-                    <button type="submit" id="update-button" class="w-full accent-bg text-white font-bold py-3 px-4 rounded-md hover:opacity-90 transition-colors duration-300">Update Password</button>
+                    <button type="submit" id="update-button" class="w-full accent-bg text-white font-bold py-3 px-4 rounded-md hover-scale transition-all duration-300 disabled:opacity-50">Update Password</button>
                 </div>
             </form>
-            <p id="message" class="mt-4 text-center text-sm text-red-400"></p>
+            <p id="message" class="mt-4 text-center text-sm text-gray-400">Please wait, verifying session...</p>
         </div>
     </div>
 
     <script>
-        // *** NOTE: No API calls here, but keeping script for consistency ***
-        const supabaseUrl = 'https://qcsjjhmbjajgidhqpgdj.supabase.co';
-        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFjc2pqaG1iamFqZ2lkaHFwZ2RqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTI3NzYsImV4cCI6MjA3NjM4ODc3Nn0.QI4JyOoRc-FBxrZXZHo3EpS7okrXRssuCAW_ZzYjMuA';
-        const supabaseClient = supabase.createClient(supabaseUrl, supabaseAnonKey);
-
+        // supabaseClient is now defined in supabaseClient.js
         const form = document.getElementById('update-password-form');
         const messageEl = document.getElementById('message');
         const newPasswordEl = document.getElementById('new-password');
         const confirmPasswordEl = document.getElementById('confirm-password');
+        const updateButton = document.getElementById('update-button');
 
-        // Extract token and type from URL hash
-        const urlParams = new URLSearchParams(window.location.hash.substring(1));
-        const accessToken = urlParams.get('access_token');
-        const type = urlParams.get('type');
+        let sessionActive = false;
 
-        if (!accessToken || type !== 'recovery') {
-            messageEl.textContent = 'Invalid or expired password reset link. Please request a new one.';
-            form.style.display = 'none';
-        } else {
-            messageEl.textContent = 'Enter your new password.';
-            messageEl.classList.remove('text-red-400');
-            messageEl.classList.add('text-gray-400');
-            form.style.display = 'block';
-        }
+        // Listen for the PASSWORD_RECOVERY event
+        supabaseClient.auth.onAuthStateChange(async (event, session) => {
+            if (event === 'PASSWORD_RECOVERY') {
+                console.log("Password recovery event detected.");
+                sessionActive = true;
+                messageEl.textContent = 'Session verified. Please enter your new password.';
+                messageEl.classList.remove('text-red-400');
+                messageEl.classList.add('text-gray-400');
+                form.classList.remove('hidden');
+            } else if (event === 'SIGNED_IN') {
+                // This can also happen if the user is already signed in
+                sessionActive = true;
+            }
+        });
+
+        // Handle cases where the event listener doesn't fire (e.g., page reload)
+        (async () => {
+            const { data: { session } } = await supabaseClient.auth.getSession();
+            if (session && !sessionActive) {
+                // User is already logged in, but not from a recovery link.
+                // We'll still allow a password update.
+                console.log("Active session found.");
+                sessionActive = true;
+                messageEl.textContent = 'Enter your new password.';
+                messageEl.classList.remove('text-red-400');
+                messageEl.classList.add('text-gray-400');
+                form.classList.remove('hidden');
+            } else if (!sessionActive) {
+                // No session, and no recovery event detected yet.
+                // Give the listener a moment, then show error.
+                setTimeout(() => {
+                    if (!sessionActive) {
+                        messageEl.textContent = 'Invalid or expired password reset link. Please request a new one.';
+                        messageEl.classList.add('text-red-400');
+                    }
+                }, 1500);
+            }
+        })();
+
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
+            messageEl.textContent = '';
+            messageEl.classList.remove('text-red-400', 'text-green-400');
 
-            if (!accessToken || type !== 'recovery') {
-                messageEl.textContent = 'Invalid session. Please request a new reset link.';
+            if (!sessionActive) {
+                messageEl.textContent = 'Your session is invalid. Please request a new reset link.';
+                messageEl.classList.add('text-red-400');
                 return;
             }
 
@@ -114,41 +126,42 @@
 
             if (newPassword !== confirmPassword) {
                 messageEl.textContent = 'Passwords do not match.';
+                messageEl.classList.add('text-red-400');
                 return;
             }
-
             if (newPassword.length < 6) {
                 messageEl.textContent = 'Password must be at least 6 characters long.';
+                messageEl.classList.add('text-red-400');
                 return;
             }
 
-            // Update password using the recovery token
+            updateButton.disabled = true;
+            updateButton.textContent = 'Updating...';
+
             try {
-                // *** Use the same token logic provided by Supabase ***
                 const { data, error } = await supabaseClient.auth.updateUser({
                     password: newPassword 
-                }/* , { // This extra options object might not be needed/valid for updateUser if using the hash fragment
-                    token: accessToken,
-                    type: 'recovery' 
-                }*/); 
+                }); 
 
                 if (error) {
-                    messageEl.textContent = `Error: ${error.message}`;
-                    console.error("Update password error:", error); // Added logging
-                } else {
-                    messageEl.textContent = 'Password updated successfully! Redirecting to login...';
-                    messageEl.classList.remove('text-red-400');
-                    messageEl.classList.add('text-green-400');
-                    
-                    // Clear the token from the URL and redirect
-                    window.history.replaceState({}, document.title, window.location.pathname);
-                    setTimeout(() => {
-                        window.location.href = '/login.html';
-                    }, 2000);
-                }
+                    throw error;
+                } 
+
+                messageEl.textContent = 'Password updated successfully! Redirecting to login...';
+                messageEl.classList.add('text-green-400');
+                
+                // Clear the token from the URL and redirect
+                window.history.replaceState({}, document.title, window.location.pathname);
+                setTimeout(() => {
+                    window.location.href = '/login.html';
+                }, 2000);
+
             } catch (err) {
-                messageEl.textContent = `An unexpected error occurred: ${err.message}`;
-                console.error("Unexpected update password error:", err); // Added logging
+                messageEl.textContent = `Error: ${err.message}`;
+                messageEl.classList.add('text-red-400');
+                console.error("Update password error:", err);
+                updateButton.disabled = false;
+                updateButton.textContent = 'Update Password';
             }
         });
     </script>
