feat(frontend): Complete v2 refactor of all pages for performance and new design.2

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="max-w-5xl mx-auto">
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">Stop Searching. Start Knowing.</h1>
                 <p class="text-lg md:text-xl text-gray-400 mb-8 max-w-3xl mx-auto">
-                    Transform your documents, e-books, and webpages into an intelligent **Cortex**. We then build a dedicated **AI Synthesist** for your Cortex, allowing you to get synthesized answers and proactive insights from your entire library.
+                    Transform your scattered documents, notes, and webpages into an intelligent <strong class="accent-text">Cortex</strong>. Cogmatiq instantly deploys a dedicated <strong class="accent-text">AI Synthesist</strong> to analyze your knowledge, answer complex questions, and find insights you've missed.
                 </p>
                 <a href="/signup.html" class="accent-bg text-white font-semibold py-4 px-8 rounded-lg text-lg hover-scale inline-block shadow-md">
                     Start Free
@@ -82,9 +82,9 @@
 
         <section class="section-padding bg-gray-900/30 backdrop-blur-sm animate-fade-in">
             <div class="max-w-4xl mx-auto text-center">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4">From Data Chaos to Proactive Insight</h2>
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">Your Knowledge, Unified. Your AI, Synthesized.</h2>
                 <p class="text-gray-400 md:text-lg mb-8 max-w-3xl mx-auto">
-                    Critical insights are trapped across disparate documents. Cogmatiq integrates this chaos into a single, queryable Cortex. We then build and train a private **AI Synthesist** on *your* information, empowering it to find, connect, and proactively surface the information that matters.
+                    Critical insights are trapped across disparate documents. Cogmatiq integrates this chaos into a single, queryable Cortex. We then build and train a private <strong class="accent-text">AI Synthesist</strong> on <em class="text-gray-300">your</em> information, empowering it to find, connect, and proactively surface the information that matters.
                 </p>
             </div>
         </section>
@@ -118,16 +118,16 @@
                 <h2 class="text-3xl md:text-4xl font-bold mb-12">Your AI Synthesist, Ready in Seconds</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
                     <div>
-                        <h3 class="text-xl font-semibold mb-2 accent-text">1. Create Your Cortex</h3>
-                        <p class="text-gray-400">Give your new "second brain" a name, like "Project Research" or "My Class Notes".</p>
+                        <h3 class="text-xl font-semibold mb-2 accent-text">1. Build Your Cortex</h3>
+                        <p class="text-gray-400">Give your new knowledge base a name, like "Project Research" or "My Class Notes".</p>
                     </div>
                     <div>
-                        <h3 class="text-xl font-semibold mb-2 accent-text">2. Add Your Sources</h3>
-                        <p class="text-gray-400">Upload files or paste web URLs. Our new pipeline processes them for chat instantly.</p>
+                        <h3 class="text-xl font-semibold mb-2 accent-text">2. Feed Your Cortex</h3>
+                        <p class="text-gray-400">Add your documents, files, or paste web URLs. Our new pipeline ingests them for chat instantly.</p>
                     </div>
                     <div>
-                        <h3 class="text-xl font-semibold mb-2 accent-text">3. Chat Instantly</h3>
-                        <p class="text-gray-400">Your Cortex is ready to chat in seconds, while the deeper Neural Map builds in the background.</p>
+                        <h3 class="text-xl font-semibold mb-2 accent-text">3. Deploy Your Synthesist</h3>
+                        <p class="text-gray-400">Your AI Synthesist is ready to chat immediately, while the deeper Neural Map builds in the background.</p>
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
                     </details>
                     <details class="card p-4 rounded-lg">
                         <summary class="font-semibold cursor-pointer">How secure is my data?</summary>
-                        <p class="text-gray-400 mt-2">Your data is yours. We use best-in-class security, isolated cloud infrastructure, and end-to-end encryption. Your documents are processed by your dedicated AI Synthesist and are **never** used for training any models.</p>
+                        <p class="text-gray-400 mt-2">Your data is yours. We use best-in-class security, isolated cloud infrastructure, and end-to-end encryption. Your documents are processed by your dedicated AI Synthesist and are <strong class="text-yellow-400">never</strong> used for training any models.</p>
                     </details>
                     <details class="card p-4 rounded-lg">
                         <summary class="font-semibold cursor-pointer">Can I cancel my Pro plan at any time?</summary>
