feat(frontend): Complete v2 refactor of all pages for performance and new design.5

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <section class="section-padding animate-fade-in">
             <div class="max-w-6xl mx-auto text-center">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4">Your Agent Does the Work.</h2>
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">Activate Your Synthesist.</h2>
                 <p class="text-gray-400 md:text-lg mb-12 max-w-3xl mx-auto">
                     Standard search tools find keywords. Cogmatiq builds a Neural Map of your knowledge, empowering your personal AI Synthesist to connect concepts, people, and projects across your entire library.
                 </p>
@@ -153,7 +153,7 @@
                     <div class="card p-8 rounded-lg border-2 border-accent-text">
                         <svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.4-8.4h-1m-16 0H3m15.55-5.55l-.71-.71M6.16 17.84l-.71-.71m12.39-.71l-.71.71M6.16 6.16l-.71.71M12 5a7 7 0 100 14 7 7 0 000-14z"></path></svg>
                         <h3 class="text-xl font-semibold mb-2">AI Synthesist & Neural Map</h3>
-                        <p class="text-gray-400">Your agent connects related concepts across all your documents to provide synthesized, intelligent answers.</p>
+                        <p class="text-gray-400">Your synthetic agent connects related concepts across all your documents to provide synthesized, intelligent answers.</p>
                         <ul class="text-gray-300 mt-4 space-y-2">
                             <li>+ Delivers a single, precise answer.</li>
                             <li>+ Understands relationships between files.</li>
