feat(frontend): Complete v2 refactor of all pages for performance and new design.17

--- a/chat.html
+++ b/chat.html
@@ -220,7 +220,7 @@
             </nav>
         </aside>
 
-        <main class="flex-grow flex flex-col p-4 md:p-8 md:pl-72 w-full pb-16 md:pb-8" onclick="closeMobileMenu()">
+        <main class="flex flex-col p-4 md:p-8 md:pl-72 w-full pb-16 md:pb-8" onclick="closeMobileMenu()">
             
             <div id="chat-panel" class="panel active flex-col flex-grow">
                 <div id="progress-container" class="hidden w-full bg-gray-700 rounded-full h-2.5 mb-4">
