--- a/chat.html
+++ b/chat.html
@@ -130,7 +130,7 @@
             flex-grow: 1;
             overflow-y: auto;
             min-height: 0;
-            padding-bottom: 5rem; /* Increased padding to ensure last message is fully visible */
+            padding-bottom: 7rem; /* Increased padding for desktop */
         }
         #chat-form-container {
             position: sticky;
@@ -142,15 +142,16 @@
 
         @media (max-width: 767px) {
             #chat-container {
-                padding-bottom: 6rem; /* Extra padding on mobile for textbox clearance */
+                padding-bottom: 8rem; /* Increased padding to clear fixed input box on mobile */
             }
             #chat-form-container {
-                padding: 0.5rem;
+                padding: 0.75rem;
                 position: fixed;
                 bottom: 0;
                 left: 0;
                 right: 0;
                 box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+                z-index: 20; /* Higher z-index to ensure input stays above chat content */
             }
         }
     </style>
@@ -412,7 +413,12 @@
         // Utility to scroll chat container to bottom
         function scrollChatToBottom() {
             requestAnimationFrame(() => {
-                chatContainer.scrollTo({ top: chatContainer.scrollHeight, behavior: 'smooth' });
+                const chatFormContainer = document.getElementById('chat-form-container');
+                const extraOffset = chatFormContainer ? chatFormContainer.offsetHeight : 0;
+                chatContainer.scrollTo({ 
+                    top: chatContainer.scrollHeight + extraOffset, 
+                    behavior: 'smooth' 
+                });
             });
         }
         
