--- a/chat.html
+++ b/chat.html
@@ -130,7 +130,7 @@
             flex-grow: 1;
             overflow-y: auto;
             min-height: 0;
-            padding-bottom: 7rem; /* Increased padding for desktop */
+            padding-bottom: 4rem; /* Reduced padding for desktop to minimize white space */
         }
         #chat-form-container {
             position: sticky;
@@ -142,7 +142,7 @@
 
         @media (max-width: 767px) {
             #chat-container {
-                padding-bottom: 8rem; /* Increased padding to clear fixed input box on mobile */
+                padding-bottom: 9rem; /* Increased padding to fully clear last message and copy button on mobile */
             }
             #chat-form-container {
                 padding: 0.75rem;
