--- a/integrations.html
+++ b/integrations.html
@@ -41,7 +41,7 @@
         <div class="max-w-4xl mx-auto">
             <h1 class="text-3xl md:text-4xl font-bold mb-8">Connect External Knowledge</h1>
             <p class="text-gray-400 mb-10 max-w-2xl">
-                Connect your external data sources here. The **Synthesist** uses these live connections to build a complete model of your knowledge and generate insights across all your accounts.
+                Connect your external data sources here. The <strong>Synthesist</strong> uses these live connections to build a complete model of your knowledge and generate insights across all your accounts.
             </p>
 
             <div id="integration-list" class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -50,7 +50,7 @@
                     <div>
                         <h3 class="text-xl font-semibold text-white mb-2">Gmail (Read-Only)</h3>
                         <p class="text-sm text-gray-400 mb-4">
-                            Connect your Gmail to include emails as **Artifacts** in a new **Knowledge Node**. This is perfect for synthesizing insights from client communication and project threads.
+                            Connect your Gmail to include emails as <strong>Artifacts</strong> in a new <strong>Knowledge Node</strong>. This is perfect for synthesizing insights from client communication and project threads.
                         </p>
                     </div>
                     <div class="mt-4">
@@ -64,8 +64,8 @@
                     <div>
                         <h3 class="text-xl font-semibold text-white mb-2">Google Drive (Auto-Sync)</h3>
                         <p class="text-sm text-gray-400 mb-4">
-                            Auto-sync selected files and folders to a dedicated **Knowledge Node**. (Coming Soon)
-                        </p>
+                            Auto-sync selected files and folders to a dedicated <strong>Knowledge Node</strong>. (Coming Soon)
+                        </g>
                     </div>
                     <div class="mt-4">
                         <button class="bg-gray-600 text-white font-semibold py-2 px-4 rounded-md text-sm w-full" disabled>
