--- a/integrations.html
+++ b/integrations.html
@@ -71,7 +71,7 @@
                     <div>
                         <h3 class="text-xl font-semibold text-white mb-2">Gmail (Read-Only)</h3>
                         <p class="text-sm text-gray-400 mb-4">
-                            Connect your Gmail to include emails as <strong>Artifacts</strong> in a new **Knowledge Node**. (Coming Soon)
+                            Connect your Gmail to include emails as <strong>Artifacts</strong> in a new <strong>Knowledge Node</strong>. (Coming Soon)
                         </p>
                     </div>
                     <div class="mt-4">
